# Fish-Food

./: .gitignore  FishFood.py  README.md  arrow_warning.py  base_enemy.py  bright_blue_fish.py  collisions.py  game_app.py  game_factory.py  game_state.py  green_fish.py  high_score.py  index.html  jellyfish.py  joystick.py  main.py  player.py  pygbag.ini  pyproject.toml  rainbow_fish.py  red_fish.py  renderer.py  requirements.txt  run_tests.py  run_tests_game.py  run_tests_visual.py  runtime.py  seahorse.py  seaweed.py  setup.py  shark.py  silver_fish.py  snake.py  star_powerup.py  test_headless.py  utils.py  wall.py
.claude/: settings.json
Sprites/: Seaweedmiddle.psd  Seaweedright.psd
archive/: main.py
